--- a/front/web/css/style1.css
+++ b/front/web/css/style1.css
@@ -918,20 +918,30 @@ header button:hover {
     font-size: 10px;
     position: relative;
     top: -330px;left: 50%;
+  
   }
-  button {
-    position: relative;
-    top: -315px;left: 170px;
-    background: transparent;
-    border: none;
-    font-size: 15px;
+}
+.petum button {
+  cursor: pointer;
+  background-color: rgb(75, 197, 235);
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  font-size: 65px;
+  color: rgb(17, 0, 255);
 
-    img {
-      width: 7%;
-      position: relative;
-      top: 14px;left: 0px;
-      
-    }
+h4 {
+    font-size: 15px;
+    position: relative;
+    top: -310px;left: 510%;
+
+}
+  img{
+    width: 50px;
+    height: 50px;
+    position: relative;
+    top: -352px;left: 610%;
   }
 }
 
@@ -1524,77 +1534,11 @@ h5, p{
 
 
 
-.blog {
-  width: 80%;
-  position: relative;
-  top: 0;
-  left: -50px;
-  color: rgb(76, 76, 80);
-  display: flex;
-  gap: 2%;
-  
-
-}
-.petum {
-  width: 100%;
-  height: 356px;
-  position: relative;
-  top: 0;left: 1%;
-  justify-content: space-around;
-  border-radius: 20px;
-  border: var(--c2) 3px solid;
-  box-shadow: 0 0 40px 30px var(--c2);
-  padding: 20px;
-  overflow: hidden;
-
-  h2, p {
-    width: 50%;
-    text-align: justify;
-    font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: relative;
-    top: -345px;left: 50%;
-  }
-.imn{
-  
-  img {
-    width: 20vw;
-    height: 37.1vh;
-    position: relative;
-    top: -20px;left: -40.4%;
-    border-radius: 15px 0 0 15px;
-  }
-}
-  h3 {
-    font-size: 10px;
-    position: relative;
-    top: -330px;left: 50%;
-  }
-  button {
-    position: relative;
-    top: -315px;left: 170px;
-    background: transparent;
-    border: none;
-    font-size: 15px;
-
-    img {
-      width: 7%;
-      position: relative;
-      top: 14px;left: 0px;
-      
-    }
-  }
-}
-
-
-
-
-
 @media (max-width: 768px) {
       .ôblog h1{
         width: 100%;
         position: relative;
-        top: -15vh;left: 0;
+        top: -35vh;left: 0;
         
       }
 }  
@@ -1625,7 +1569,7 @@ h5, p{
     position: relative;
     top: 20px;left: 5%;
   }
-}
+
 .petum button {
     position: relative;
     top: -5px;left: -10px;
@@ -1633,9 +1577,13 @@ h5, p{
     border: none;
     font-size: 10px;
 
-    
+    h4 {
+      font-size: 10px;
+      position: relative;
+      top: -50%;left: 50%;
+    }
   }  
-  
+  }
 @media (max-width: 768px) {
       .imn img {
         position: relative;
